# aiuda-planner-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docker-publish.yml
demo/financial-mcp/: README.md  mcp.yaml  portfolio.csv  run_demo.sh
docs/: CLI.md  DOCKER.md  MCP.md  MODELS.md
docs/getting-started/: configuration.md
examples/: basic_usage.py  fastapi_example.py  streaming_example.py
examples/runs/20260102_144716_020bfd/: README.md  how_to_run_this_example.md
examples/runs/20260102_144716_020bfd/artifacts/: executive_summary_report.txt  financial_metrics_summary.csv  revenue_rd_analysis.csv  stock_performance_analysis.csv
examples/runs/20260102_144716_020bfd/logs/: events.jsonl
examples/runs/20260102_144716_020bfd/notebooks/: analysis_20260102_144722.ipynb
examples/runs/20260102_150305_ed4307/: README.md
examples/runs/20260102_150305_ed4307/artifacts/: 00_project_summary.txt  07_strategic_recommendations.txt
examples/runs/20260102_150305_ed4307/data/: brand_sales_dataset.csv
examples/runs/20260102_150305_ed4307/logs/: events.jsonl
examples/runs/20260102_151407_af0d2b/: README.md
examples/runs/20260102_151407_af0d2b/artifacts/: final_model.pkl  (+3 more)
examples/runs/20260102_152810_982bac/: README.md
src/aiuda_planner/: __init__.py  cli.py
src/aiuda_planner/agents/: base.py
src/aiuda_planner/core/: context.py  engine.py
src/aiuda_planner/schema/: models.py
src/aiuda_planner/utils/: notebook.py  run_logger.py
src/datapilot/: __init__.py  cli.py
src/datapilot/agents/: __init__.py  base.py
src/datapilot/core/: __init__.py  engine.py  executor.py  planner.py
src/datapilot/schema/: __init__.py  models.py
src/datapilot/utils/: __init__.py  logger.py  notebook.py  run_logger.py
src/dsagent/: __init__.py  cli.py
src/dsagent/agents/: __init__.py  base.py  conversational.py
src/dsagent/cli/: commands.py  init.py  main.py  renderer.py  repl.py
src/dsagent/core/: __init__.py  engine.py
src/dsagent/schema/: __init__.py  models.py
src/dsagent/server/: app.py  deps.py  manager.py  models.py  websocket.py
src/dsagent/session/: logger.py  models.py
src/dsagent/tools/: mcp_manager.py
src/dsagent/utils/: notebook.py  run_logger.py  validation.py
tests/: test_context.py  test_conversational.py  test_notebook.py  test_run_logger.py
(+17 files in other folders)
